--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "@angular/platform-browser": "~10.2.4",
     "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular/router": "~10.2.4",
+    "@types/geojson": "^7946.0.10",
+    "angular-datatables": "^6.0.0",
+    "datatables.net": "^1.13.1",
+    "datatables.net-dt": "^1.13.1",
+    "jquery": "^3.6.2",
     "leaflet": "^1.7.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.6.15",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -28,8 +34,10 @@
     "@angular-devkit/build-angular": "~0.1002.1",
     "@angular/cli": "~10.2.1",
     "@angular/compiler-cli": "~10.2.4",
+    "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.14",
     "@types/leaflet": "^1.4.5",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
