--- a/angular.json
+++ b/angular.json
@@ -122,6 +122,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "geomaps"
+    }
+  },
+  "defaultProject": "geomaps",
+  "cli": {
+    "analytics": false
+  }
 }
